# caderninho

./: .coveragerc  .env.example  .gitignore  Dockerfile  Makefile  database.db  docker-compose.yaml  manifest.json  pyproject.toml  readme.md  requirements.txt  run
.github/workflows/: tests.yml
caderninho/src/: app.py  auth.py  db.py  env.py  services.py  utils.py
caderninho/src/domain/: entities.py  inputs.py  (+2 more)
src/: .env.example  app.py  auth.py  db.py  env.py  services.py  utils.py
src/decorators/: auth.py
src/domain/: entities.py  inputs.py  repository.py  schemas.py
src/modules/: asaas.py  email.py  logger.py  send_email.py  smpt.py
src/routers/: autenticacao.py  caixa_movimentacoes.py  estoques.py  ingredientes.py  insumos.py  organizacao.py  paginas.py  receitas.py  scripts.py  vendas.py
src/schemas/: auth.py  docs.py
src/scripts/: seed.py
src/static/: scripts.js  service-worker.js  style.css  tabler.min.css
src/templates/: __init__.py  base.html  chartjs.py  chatjs.py  context.py  filters.py  index.html  layout.html  receita.html
src/tests/: conftest.py  mocks.py  test_app.py  test_asaas.py  test_autenticacao.py  test_cache.py  test_caixa_movimentacao.py  test_estoques.py  test_filters.py  test_insumos.py  test_modules_email.py  test_organizacao.py  test_receitas.py  test_repository.py  test_vendas.py  utils.py
tests/: conftest.py  test_app.py  test_autenticacao.py  test_caixa_movimentacao.py  test_estoques.py  test_filters.py  test_insumos.py  test_modules_email.py  test_organizacao.py  test_receitas.py  test_repository.py  utils.py
(+154 files in other folders)
