[project]
name = "caderninho"
version = "0.1.0"
description = ""
authors = [
    {name = "Iago B. Almeida",email = "iago.borba.almeida@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[default] (>=0.129.0,<0.130.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "sqlmodel (>=0.0.33,<0.0.34)",
    "loguru (>=0.7.3,<0.8.0)",
    "pixqrcode (>=1.1.0,<2.0.0)",
    "aiocache (>=0.12.3,<0.13.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pillow (>=12.1.1,<13.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
